# pkucli

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  name.txt
.claude-plugin/: marketplace.json  plugin.json
crates/bdkj/: Cargo.toml
crates/bdkj/src/: api.rs  client.rs  commands.rs  display.rs  groups.rs  lib.rs  login.rs  main.rs
crates/campuscard/: Cargo.toml  README.md
crates/campuscard/src/: api.rs  client.rs  commands.rs  display.rs  lib.rs  login.rs  main.rs
crates/claspider/: Cargo.toml  README.md
crates/claspider/src/: dean.rs  display.rs  elective_query.rs  lib.rs  main.rs  model.rs  zhiyun.rs
crates/common/: Cargo.toml  README.md
crates/common/src/: captcha.rs  credential.rs  iaaa.rs  lib.rs  otp.rs  qr.rs  session.rs
crates/course/: Cargo.toml  README.md
crates/course/src/: api.rs  client.rs  commands.rs  display.rs  lib.rs  login.rs  main.rs  multipart.rs
crates/cwfw/: Cargo.toml
crates/cwfw/src/: api.rs  client.rs  commands.rs  context.rs  display.rs  encrypt.rs  lib.rs  login.rs  main.rs
crates/elective/: Cargo.toml  README.md
crates/elective/src/: api.rs  client.rs  commands.rs  config.rs  display.rs  lib.rs  login.rs  main.rs
crates/info-auth/: Cargo.toml  README.md
crates/info-auth/src/: lib.rs  main.rs
crates/info-spider/: Cargo.toml  README.md
crates/info-spider/src/: articles.rs  cli.rs  client.rs  lib.rs  login.rs  main.rs  scrape.rs  search.rs  session.rs
crates/pku-cli/: Cargo.toml  README.md
crates/pku-cli/src/: main.rs
crates/portal/: Cargo.toml
crates/portal/src/: calendar.rs  client.rs  freeclassroom.rs  lib.rs  main.rs  netfee.rs
crates/treehole/: Cargo.toml  README.md
crates/treehole/src/: api.rs  client.rs  colorize.rs  commands.rs  display.rs  lib.rs  login.rs  main.rs  verify.rs
docs/: treehole-api.md  wechat-mp-flow.md
skills/: PUBLISH.md
skills/bdkj/: SKILL.md
skills/campuscard/: SKILL.md
skills/claspider/: SKILL.md
skills/course/: SKILL.md
skills/cwfw/: SKILL.md
skills/elective/: SKILL.md
skills/info-common/: SKILL.md
skills/portal/: SKILL.md
skills/treehole/: SKILL.md
