[package]
name = "pku-campuscard"
description = "北大校园卡 CLI 客户端"
readme = "README.md"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["pku", "campus-card", "cli", "payment"]
categories = ["command-line-utilities"]

[[bin]]
name = "campuscard"
path = "src/main.rs"

[dependencies]
pkuinfo-common = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["time"] }
reqwest = { workspace = true }
reqwest_cookie_store = { workspace = true }
cookie_store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
rpassword = { workspace = true }
sha2 = "0.10"
qrcode = { workspace = true, features = ["image"] }
image = { workspace = true }
regex = { workspace = true }
serde_urlencoded = "0.7"
