[package]
name = "pku-claspider"
description = "北大课程信息爬取工具（教务部 + 选课网）"
readme = "README.md"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["pku", "course", "spider", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "claspider"
path = "src/main.rs"

[dependencies]
pkuinfo-common = { version = "0.1.1", path = "../common" }
pku-elective = { version = "0.1.1", path = "../elective" }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["cookies", "gzip", "brotli", "json"] }
reqwest_cookie_store = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
scraper = "0.22"
regex = "1"
rand = "0.8"
