[package]
name = "pkuinfo-common"
description = "PKU IAAA 统一身份认证及公共工具库"
readme = "README.md"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["pku", "iaaa", "auth", "sso"]
categories = ["authentication"]

[dependencies]
reqwest = { version = "0.12", features = ["cookies", "gzip", "brotli", "json"] }
reqwest_cookie_store = "0.8"
cookie_store = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
colored = "2"
rand = "0.8"
rsa = "0.9"
base64 = "0.22"
image = "0.25"
rqrr = "0.9"
qrcode = { version = "0.14", default-features = false }
terminal_size = "0.4"
viuer = { version = "0.9", features = ["print-file"] }
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
hmac = "0.12"
sha1 = "0.10"
data-encoding = "2"
rpassword = "5"

# Keyring: 按平台选择 backend
# Linux: D-Bus Secret Service（GNOME Keyring / KDE Wallet），持久化
#   不用 linux-keyutils，内核 session keyring 跨进程不持久
# macOS: Apple Keychain
# Windows: Windows Credential Manager
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = ["sync-secret-service"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }
