[package]
name = "pku-course"
description = "北大教学网 CLI 客户端"
readme = "README.md"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["pku", "blackboard", "course", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "course"
path = "src/main.rs"

[dependencies]
pkuinfo-common = { version = "0.1.2", path = "../common" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "process", "io-util"] }
reqwest = { version = "0.12", features = ["cookies", "gzip", "brotli", "json", "stream"] }
reqwest_cookie_store = "0.8"
cookie_store = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rpassword = "5"
scraper = "0.22"
regex = "1"
m3u8-rs = "6.0"
aes = "0.8"
cbc = { version = "0.1.2", features = ["std"] }
url = "2.5"
bytes = "1"
indicatif = "0.17"
futures = "0.3"
