[package]
name = "pku-course"
description = "北大教学网 CLI 客户端"
readme = "README.md"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["pku", "blackboard", "course", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "course"
path = "src/main.rs"

[dependencies]
pkuinfo-common = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["time", "fs", "process", "io-util"] }
reqwest = { workspace = true, features = ["stream"] }
reqwest_cookie_store = { workspace = true }
cookie_store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
rpassword = { workspace = true }
scraper = { workspace = true }
regex = { workspace = true }
m3u8-rs = "6.0"
aes = "0.8"
cbc = { version = "0.1.2", features = ["std"] }
url = { workspace = true }
bytes = "1"
indicatif = "0.17"
futures = "0.3"
