[package]
name = "pku-elective"
description = "北大选课网 CLI 客户端"
readme = "README.md"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["pku", "elective", "course-selection", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "elective"
path = "src/main.rs"

[dependencies]
pkuinfo-common = { version = "0.1.1", path = "../common" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["cookies", "gzip", "brotli", "json"] }
reqwest_cookie_store = "0.8"
cookie_store = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rpassword = "5"
scraper = "0.22"
regex = "1"
base64 = "0.22"
image = "0.25"
viuer = { version = "0.9", features = ["print-file"] }
toml = "0.8"
