[package]
name = "pku-elective"
description = "北大选课网 CLI 客户端"
readme = "README.md"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["pku", "elective", "course-selection", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "elective"
path = "src/main.rs"

[dependencies]
pkuinfo-common = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["time"] }
reqwest = { workspace = true }
reqwest_cookie_store = { workspace = true }
cookie_store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
rpassword = { workspace = true }
scraper = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
image = { workspace = true }
viuer = { version = "0.9", features = ["print-file"] }
toml = "0.8"
