[package]
name = "pku-auth"
description = "PKU 统一凭据管理 CLI — 安全地存储/管理 IAAA 认证凭据"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["pku", "auth", "keyring", "credential"]
categories = ["command-line-utilities", "authentication"]

[[bin]]
name = "info-auth"
path = "src/main.rs"

[dependencies]
pkuinfo-common = { version = "0.1.2", path = "../common" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
colored = "2"
rpassword = "5"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = ["sync-secret-service"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }
