[package]
name = "info-spider"
version = "0.1.0"
edition = "2021"
description = "基于微信公众号后台超链接查找的文章爬虫 CLI"

[[bin]]
name = "info-spider"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "signal"] }
reqwest = { version = "0.12", features = ["cookies", "gzip", "brotli", "json", "stream"] }
reqwest_cookie_store = "0.8"
cookie_store = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
image = "0.25"
rqrr = "0.9"
qrcode = { version = "0.14", default-features = false }
terminal_size = "0.4"
rand = "0.8"
urlencoding = "2"
colored = "2"
html2md = "0.2"
