[package]
name = "pku-portal"
description = "北京大学校内信息门户 CLI — 空闲教室 / 校历 / 网费"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["pku", "portal", "netfee", "classroom", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "portal"
path = "src/main.rs"

[lib]
name = "pku_portal"
path = "src/lib.rs"

[dependencies]
pkuinfo-common = { version = "0.1.2", path = "../common" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["cookies", "gzip", "brotli", "json"] }
reqwest_cookie_store = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
scraper = "0.20"
regex = "1"
urlencoding = "2"
url = "2"
qrcode = { version = "0.14", default-features = false }
