[package]
name = "pku-portal"
description = "北京大学校内信息门户 CLI — 空闲教室 / 校历 / 网费"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["pku", "portal", "netfee", "classroom", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "portal"
path = "src/main.rs"

[lib]
name = "pku_portal"
path = "src/lib.rs"

[dependencies]
pkuinfo-common.workspace = true
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
reqwest_cookie_store.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
colored.workspace = true
chrono.workspace = true
scraper.workspace = true
regex.workspace = true
urlencoding = "2"
url.workspace = true
qrcode.workspace = true
