[package]
name = "pku-treehole"
description = "北大树洞 CLI 客户端"
readme = "README.md"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["pku", "treehole", "cli", "forum"]
categories = ["command-line-utilities"]

[[bin]]
name = "treehole"
path = "src/main.rs"

[dependencies]
pkuinfo-common = { version = "0.1.1", path = "../common" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "signal"] }
reqwest = { version = "0.12", features = ["cookies", "gzip", "brotli", "json", "multipart"] }
reqwest_cookie_store = "0.8"
cookie_store = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
url = "2"
rpassword = "5"
urlencoding = "2"
