[package]
name = "pku-treehole"
description = "北大树洞 CLI 客户端"
readme = "README.md"
version = "0.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["pku", "treehole", "cli", "forum"]
categories = ["command-line-utilities"]

[[bin]]
name = "treehole"
path = "src/main.rs"

[dependencies]
pkuinfo-common = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["time", "fs", "signal"] }
reqwest = { workspace = true, features = ["multipart"] }
reqwest_cookie_store = { workspace = true }
cookie_store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
uuid = { version = "1", features = ["v4"] }
url = { workspace = true }
rpassword = { workspace = true }
urlencoding = "2"
